Add web favicon

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <title>{% block title %}{% endblock %}</title>
-    <link rel="icon" href="../static/img/NVIDIA.ico">
+    <link rel="icon" href="../static/img/pooh_icon.ico">
     <style>
         table, th, td {
             border: 1px solid black;
